--- a/src/Telligent.Evolution.Extensions.SharePoint.IntegrationManager/Web/SharePoint/IntegrationManager/Style/IntegrationManager.css
+++ b/src/Telligent.Evolution.Extensions.SharePoint.IntegrationManager/Web/SharePoint/IntegrationManager/Style/IntegrationManager.css
@@ -6,7 +6,7 @@
 		.sp-object-manager .header td{padding-left: 10px;}
 	.sp-object-manager .scrollable-content { width: 100%; max-height: 400px; overflow-y: auto; word-wrap: break-word;}
 		.sp-object-manager .scrollable-content .content{width: 100%; table-layout:fixed; border-collapse:collapse;}
-			.sp-object-manager .header input.plugin-filter {font-family: Arial,Helvetica; width: 100%; height: 14px; border: 1px solid #888; vertical-align: middle; padding: 5px 2px; margin: 8px 0;}
+			.sp-object-manager .header input.plugin-filter {font-family: Arial,Helvetica; width: 100%; height: 30px; border: 1px solid #888; vertical-align: middle; padding: 5px 2px; margin: 8px 0;}
 				.sp-object-manager .header input.plugin-filter.plugin-filter.empty{color: #999;}
 			.sp-object-manager .header .header-controls {padding-right: 10px;}
 			.sp-object-manager .scrollable-content .content td{padding-left: 10px;}
@@ -50,3 +50,5 @@ html { background-color: #FFFFFF;}
 		.sp-partnership-manager-page .media-gallery-list .sharepoint-site{ text-align:center; color:silver;}
 		.sp-partnership-manager-page .media-gallery-list .sharepoint-doclib{ text-align:right; width: 30%;}
 .message.error {color: #600; background-color: #ECC; border-color: #600; padding: 5px;}
+
+.control.spsite-url { width: 300px; }
