--- a/src/Telligent.Evolution.Extensions.SharePoint.ProfileSync/Web/SharePoint/ProfileSync/Style/SPProfileSync.css
+++ b/src/Telligent.Evolution.Extensions.SharePoint.ProfileSync/Web/SharePoint/ProfileSync/Style/SPProfileSync.css
@@ -6,7 +6,7 @@
 		.sp-profile-sync .header td{padding-left: 10px;}
 	.sp-profile-sync .scrollable-content { width: 100%; max-height: 400px; overflow-y: auto; word-wrap: break-word;}
 		.sp-profile-sync .scrollable-content .content {width: 100%; table-layout:fixed; border-collapse:collapse;}
-			.sp-profile-sync .header input.plugin-filter {font-family: Arial,Helvetica; width: 100%; height: 14px; border: 1px solid #888; vertical-align: middle; padding: 5px 2px; margin: 8px 0;}
+			.sp-profile-sync .header input.plugin-filter {font-family: Arial,Helvetica; width: 100%; height: 30px; border: 1px solid #888; vertical-align: middle; padding: 5px 2px; margin: 8px 0;}
 				.sp-profile-sync .header input.plugin-filter.plugin-filter.empty{color: #999;}
 			.sp-profile-sync .header .header-controls {padding-right: 10px;}
 			.sp-profile-sync .scrollable-content .content td{padding-left: 10px;}
@@ -51,3 +51,5 @@ html { background-color: #FFFFFF;}
 		.sp-profile-sync-modal .content .tbl-field-mapping .template {display: none;}
 	.sp-profile-sync-modal .content .tbl-field-mapping td.del-cell {width: 16px; vertical-align: middle;}
 	.sp-profile-sync-modal .content .tbl-field-mapping td.del-cell div {}
+
+.control.spsite-url { width: 300px; }
